# meerkat

./: Cargo.toml  README.md  log.txt  test.mkt  test.txt  testcompute.mkt
src/: main.rs
src/backend/: defworker_proc.rs  dependency.rs  message.rs  mod.rs  repl.rs  srvmanager_proc.rs  varworker_proc.rs  worker.rs
src/frontend/: meerast.rs  mod.rs  parse.lalrpop  typecheck.rs
test/: test01.mkt  test02.mkt  test03.mkt
