[package]
name = "distr_intrp"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
pretty = "0.12.3"
inline_colorization = "0.1.5"
petgraph = "0.6.5"
tokio = { version = "1", features = ["full"] }
